--- a/install
+++ b/install
@@ -70,11 +70,14 @@ r_symlink .wgetrc
 r_symlink .zshrc
 
 # Install operating system specific dotfiles
-if [[ `uname -s` == "Darwin" ]]; then
-  sh ${DOTFILES_DIR}/osx/install
-elif [[ `uname -s` == "Linux" ]]; then
-  sh ${DOTFILES_DIR}/linux/install
-fi
+declare -a os_dotfiles
+[[ `uname -s` == "Darwin" ]] && os_dotfiles+=("${DOTFILES_DIR}/osx/install")
+[[ `uname -s` == "Linux"  ]] && os_dotfiles+=("${DOTFILES_DIR}/linux/install")
+[[ -f "/etc/arch-release" ]] && os_dotfiles+=("${DOTFILES_DIR}/arch/install")
+
+for installer in ${os_dotfiles[@]}; do
+  [ -r "${installer}" ] && [ -f "${installer}" ] && source "${installer}"
+done
 
 # Fin
 echo "Fin :)"
