--- a/install
+++ b/install
@@ -86,6 +86,8 @@ declare -a os_dotfiles
 [[ `uname -s` == "Darwin" ]] && os_dotfiles+=("${DOTFILES_DIR}/osx/install")
 [[ `uname -s` == "Linux"  ]] && os_dotfiles+=("${DOTFILES_DIR}/linux/install")
 [[ -f "/etc/arch-release" ]] && os_dotfiles+=("${DOTFILES_DIR}/arch/install")
+[[ -f "/etc/debian-version" ]] && os_dotfiles+=("${DOTFILES_DIR}/debian/install")
+[[ -f "/etc/redhat-release" ]] && os_dotfiles+=("${DOTFILES_DIR}/redhat/install")
 
 for installer in ${os_dotfiles[@]}; do
   [ -r "${installer}" ] && [ -f "${installer}" ] && source "${installer}"
