--- a/osx/install
+++ b/osx/install
@@ -1,14 +1,11 @@
 #!/usr/bin/env bash
 #
 # ~/.dotfiles/osx/install
-# dotfiles -- Personal dotfile repo
-# Author: Blake Jakopovic
-# Git:    https://github.com/blakejakopovic/dotfiles
 
 [ -z "$DOTFILES_DIR" ] && { echo "Error: ${0} cannot be called directly"; exit 1; }
 
 DOTFILES_DIR="${DOTFILES_DIR}/osx"
 
-echo "==> Installing osx dotfiles..."
+echo "==> Installing macOS dotfiles..."
 
 r_symlink .git-credentials
