--- a/osx/install
+++ b/osx/install
@@ -2,9 +2,9 @@
 #
 # ~/.dotfiles/osx/install
 
-[ -z "$DOTFILES_DIR" ] && { echo "Error: ${0} cannot be called directly"; exit 1; }
+[ -z "$DOTFILESPATH" ] && { echo "Error: ${0} cannot be called directly"; exit 1; }
 
-DOTFILES_DIR="${DOTFILES_DIR}/osx"
+DOTFILESPATH="${DOTFILESPATH}/osx"
 
 echo "==> Installing macOS dotfiles..."
 
