--- a/install
+++ b/install
@@ -63,7 +63,7 @@ echo "==> Installing shared dotfiles..."
 r_dir .config/mpv
 
 # Symlink directories
-r_symlink .git_hooks git_hooks
+r_symlink .git_hooks
 
 # Symlink config files
 r_symlink .config/mpv/mpv.conf mpv.conf
