--- a/install
+++ b/install
@@ -101,6 +101,7 @@ r_symlink .gemrc
 r_symlink .gitconfig
 r_symlink .gitignore_global
 r_symlink .gituserconfig
+r_synlink .gitattributes
 r_symlink .hushlogin
 r_symlink .nanorc
 r_symlink .screenrc
